--- a/HarmDemo/src/main/resources/application.properties
+++ b/HarmDemo/src/main/resources/application.properties
@@ -5,5 +5,9 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/harmdb
 spring.datasource.username=student
 spring.datasource.password=student
 spring.jpa.show-sql=true
-spring.jpa.datasource-platform=org.hibernate.dialect.PostgrSQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+
+spring.security.user.name=user
+spring.security.user.password=123456
