--- a/HarmDemo/src/main/resources/application.properties
+++ b/HarmDemo/src/main/resources/application.properties
@@ -8,6 +8,8 @@ spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 spring.security.user.name=user
 spring.security.user.password=123456
